# cwsc

./: .gitignore  CLAUDE.md  README.md  package.json  tsconfig.json  webpack.config.js
DOCS/: architecture.md  codebase.md  design.md  language.md  roadmap.md  type-mapping.md
cws-devtool/: package.json
cws-devtool/src/: App.css  App.tsx  AppContext.tsx  stateReducer.ts
examples/atomic-swap/: cwsproject.json
examples/counter/: cwsproject.json
examples/cw20-token/: cwsproject.json
examples/cw721-nft/: cwsproject.json
examples/kitchen-sink/: cwsproject.json
examples/kitchen-sink/trans/cwscript-runtime/: Cargo.toml
examples/kitchen-sink/trans/cwscript-runtime/src/: context.rs  lib.rs  traits.rs  types.rs
examples/kitchen-sink/trans/cwscript-runtime/src/types/: cwsarray.rs  cwsbool.rs  cwsint.rs  cwslist.rs  cwsmap.rs  cwsoption.rs  cwsstring.rs  mod.rs
examples/lang-features/: cwsproject.json
examples/nameservice/: cwsproject.json
examples/terraswap/: cwsproject.json
examples/whitelist/: cwsproject.json
grammar/: CWScriptLexer.g4  CWScriptParser.g4  CWScriptParser_old.g4
grammar/.antlr/: CWScriptLexer.interp  CWScriptLexer.java  CWScriptLexer.tokens  CWScriptParser.interp  CWScriptParser.java  CWScriptParser.tokens
scripts/: spec-runner.sh
scripts/ralph/: prd.json  progress.txt
src/: ast-eval.ts  ast.ts  codegen.ts  compiler.ts  cwsfmt.ts  e2e.ts  index.ts  ir-builder.ts  ir.ts  pipelines.ts  print-diagnostics.ts  projects.ts  semantics.ts  symbol-table.ts  type-system.ts
src/ir/: ir.ts  (+7 more)
tests/: add.test.js  add.test.js.map  add.test.ts
(+104 files in other folders)
